NS-923, NS-925, NS-924,NS-926, NS-927, NS-955, NS-957

--- a/app/src/main/res/drawable/ic_message_readed.xml
+++ b/app/src/main/res/drawable/ic_message_readed.xml
@@ -7,10 +7,10 @@
         android:fillColor="@color/green"
         android:pathData="M12,12m-11.5,0a11.5,11.5 0,1 1,23 0a11.5,11.5 0,1 1,-23 0"
         android:strokeWidth="1"
-        android:strokeColor="@color/white" />
+        android:strokeColor="@color/black" />
     <path
         android:fillColor="@color/green"
         android:pathData="M39,12m-11.5,0a11.5,11.5 0,1 1,23 0a11.5,11.5 0,1 1,-23 0"
         android:strokeWidth="1"
-        android:strokeColor="@color/white" />
+        android:strokeColor="@color/black" />
 </vector>
