--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -59,7 +59,7 @@
     <string name="text_empty_state_friendship_description">Non si dispone di richieste di amicizia in sospeso.</string>
     <string name="text_empty_state_search_title">Trova i tuoi amici</string>
     <string name="text_empty_state_search_description">Cerca i tuoi amici nickname e comunicare</string>
-    <string name="text_now">Ora</string>
+    <string name="text_now">Ora </string>
     <string name="text_yesterday">Ieri</string>
     <string name="text_close">Vicino</string>
     <string name="text_confirm">Conferma</string>
@@ -75,4 +75,5 @@
     <string name="text_no">No</string>
     <string name="text_empty_state_search_contacts">La tua ricerca non ha prodotto risultati</string>
     <string name="text_contact">CONTATTO</string>
+    <string name="text_error_updating_language">Verificato un errore durante la modifica lingua, riprova</string>
 </resources>
