--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,8 @@
     <dimen name="x_x_small_margin">2dp</dimen>
     <dimen name="text_size_audio_duration">12sp</dimen>
     <dimen name="text_size_call_title">20sp</dimen>
+    <dimen name="text_size_message_date">10sp</dimen>
+    <dimen name="text_size_message">17sp</dimen>
     <dimen name="circle_progress_bar">4dp</dimen>
     <dimen name="text_size_self_destruct_time">12sp</dimen>
     <item name="width_app_button" format="float" type="dimen">0.8</item>
