--- a/app/src/main/res/values-it/subscription.xml
+++ b/app/src/main/res/values-it/subscription.xml
@@ -12,4 +12,5 @@
     <string name="text_payment_method">Metodo di pagamento</string>
     <string name="text_message_selection_type_subscription">Devi selezionare un tipo di abbonamento</string>
     <string name="text_warning">Successivamente, verrai reindirizzato a un portale di pagamento, questo portale è esterno alla Chat segreta di Napoleone, pertanto non ha le stesse caratteristiche della nostra applicazione e devi accettare i termini e le condizioni previsti per il suo utilizzo. Non siamo responsabili del trattamento dei dati forniti nel modulo di pagamento.</string>
+    <string name="text_subscription_and_time">%1$s - %2$d giorni rimanenti</string>
 </resources>
