--- a/app/src/main/res/values-fr/subscription.xml
+++ b/app/src/main/res/values-fr/subscription.xml
@@ -12,4 +12,5 @@
     <string name="text_payment_method">Procédé de paiement</string>
     <string name="text_message_selection_type_subscription">Vous devez sélectionner un type d\'abonnement</string>
     <string name="text_warning">Vous serez ensuite redirigé vers un portail de paiement, ce portail est externe à NapoleoN Chat, il n\'a donc pas les mêmes caractéristiques que notre application et vous devez accepter les termes et conditions stipulés pour son utilisation. Nous ne sommes pas responsables du traitement des données fournies dans le module de paiement.</string>
+    <string name="text_subscription_and_time">%1$s - %2$d jours restants</string>
 </resources>
