--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,7 +28,7 @@
     <dimen name="x_x_small_padding">2dp</dimen>
     <dimen name="x_x_small_margin">2dp</dimen>
     <dimen name="text_size_audio_duration">12sp</dimen>
-    <dimen name="text_size_call_title">20sp</dimen>
+    <dimen name="text_size_call_title">18sp</dimen>
     <dimen name="text_size_message_date">10sp</dimen>
     <dimen name="text_size_message">17sp</dimen>
     <dimen name="circle_progress_bar">4dp</dimen>
@@ -42,6 +42,9 @@
     <dimen name="height_self_destruct_time">15dp</dimen>
     <dimen name="width_attachment_circle_progress">70dp</dimen>
     <dimen name="height_attachment_circle_progress">70dp</dimen>
+    <dimen name="text_size_call_name">16sp</dimen>
+    <dimen name="text_size_call_duration">14sp</dimen>
+    <dimen name="text_size_calling">16sp</dimen>
 
     <!-- BEGIN MATERIAL RIPPLE DIMENS -->
     <item name="low_ripple_pressed_alpha" format="float" type="dimen">0.12</item>
