NS-913, NS-968, NS-963, NS-965, NS-916, NS-970, NS-972, NS-967

--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -18,38 +18,39 @@
             android:id="@+id/imageView_logo_napoleon"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView_logo_app"
+            app:layout_constraintBottom_toTopOf="@+id/container_logo_app"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.25"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_napoleon_vertical" />
+            app:srcCompat="?attr/attrLogoAbout" />
 
-        <ImageView
-            android:id="@+id/imageView_logo_app"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView_app_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_logo_napoleon"
-            app:srcCompat="@drawable/logo_napoleon_app" />
-
-        <TextView
-            android:id="@+id/textView_app_name"
-            style="@style/BodyTextView"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/container_logo_app"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_napoleon_secret_chat"
-            android:textAlignment="center"
+            android:gravity="center"
+            android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/textView_version"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_logo_app" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView_logo_napoleon">
+
+            <ImageView
+                android:id="@+id/imageView_logo_app"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/logo_napoleon_app" />
+
+            <TextView
+                android:id="@+id/textView_app_name"
+                style="@style/BodyTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:text="@string/text_napoleon_secret_chat"
+                android:textAlignment="center" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView_version"
@@ -59,9 +60,8 @@
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_app_name"
+            app:layout_constraintTop_toBottomOf="@+id/container_logo_app"
             tools:text="1.0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
