--- a/app/src/main/res/values-de/activate_biometrics.xml
+++ b/app/src/main/res/values-de/activate_biometrics.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_biometrics_description">Sie können die Methode der Freigabe wählen; Sie können jederzeit über Access Pin zugreifen</string>
+    <string name="text_biometrics_description">Wählen Sie Ihre Lieblings Entriegelung</string>
     <string name="text_only_pin">Stift</string>
     <string name="text_pin_and_fingerprint">PIN + Fingerabdruck</string>
     <string name="text_pin_and_unlock_facial">PIN + Face entsperren</string>
