--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -48,7 +48,7 @@
         <attr name="controlColors" format="reference" />
         <attr name="isEncryptedFile" format="boolean" />
         <attr name="absolutePath" format="string" />
-        <attr name="audioId" format="integer" />
+        <attr name="audioId" format="string" />
         <attr name="seekbarProgressBackgroundTint" format="reference" />
         <attr name="seekbarProgressTint" format="reference" />
         <attr name="seekbarThumbTint" format="reference" />
@@ -89,6 +89,7 @@
     <attr name="attrTextColorHintConversationInputPanel" format="reference" />
     <attr name="attrTextColorConversationInputPanel" format="reference" />
     <attr name="attrTextColorButtonsPreview" format="reference" />
+    <attr name="attrTextColorEnterCode" format="reference" />
 
     <!--ActionBarItem-->
     <attr name="attrActionBarItemBackground" format="reference" />
@@ -147,6 +148,8 @@
 
     <!-- Seekbar Thumb Tint -->
     <attr name="attrSeekbarThumbTint" format="reference" />
+
+    <attr name="attrLogoAbout" format="reference" />
 
     <declare-styleable name="CircleProgressBar">
         <attr name="min" format="integer" />
