--- a/app/src/main/res/values-de/security_settings.xml
+++ b/app/src/main/res/values-de/security_settings.xml
@@ -7,7 +7,7 @@
     <string name="text_time_to_request_access_pin">Zeit auf Anfrage Zugang Stift</string>
     <string name="text_account_recovery_information">Konto-Wiederherstellung</string>
     <string name="text_allow_download_attachments">Zulassen, dass Download-Anhänge gesendet werden</string>
-    <string name="text_unlock_options">Wählen Sie Ihre Lieblings Entriegelung</string>
+    <string name="text_unlock_options">Unlock-Optionen</string>
     <string name="text_message_self_destruct_time_not_send">Destruct Zeit und ungelesene Nachrichten fehlgeschlagen</string>
     <string name="text_conversation">KONVERSATION</string>
 </resources>
