--- a/app/src/main/res/values-pt/activate_biometrics.xml
+++ b/app/src/main/res/values-pt/activate_biometrics.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_biometrics_description">Você pode escolher o método de liberação; Você sempre pode acessar através do Acesso Pin</string>
+    <string name="text_biometrics_description">Escolha o seu método de desbloqueio favorito</string>
     <string name="text_only_pin">PIN</string>
     <string name="text_pin_and_fingerprint">Pin + impressão digital</string>
     <string name="text_pin_and_unlock_facial">PIN + Desbloqueio facial</string>
