--- a/app/src/main/res/values/security_settings.xml
+++ b/app/src/main/res/values/security_settings.xml
@@ -7,7 +7,7 @@
     <string name="text_time_to_request_access_pin">Time to request access pin</string>
     <string name="text_account_recovery_information">Account recovery</string>
     <string name="text_allow_download_attachments">Allow download attachments sent</string>
-    <string name="text_unlock_options">Choose your favorite unlocking method</string>
+    <string name="text_unlock_options">Unlock options</string>
     <string name="text_message_self_destruct_time_not_send">Destruct time and unread messages failed</string>
     <string name="text_conversation">CONVERSATION</string>
 </resources>
