--- a/app/src/main/res/layout/account_attack_dialog_fragment.xml
+++ b/app/src/main/res/layout/account_attack_dialog_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".ui.accountAttack.AccountAttackDialogFragment">
 
     <data>
 
@@ -10,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.accountAttack.AccountAttackDialogFragment">
+        android:background="?attr/attrBackgroundColorBackgroundDialog">
 
         <TextView
             android:id="@+id/textView_title"
@@ -34,7 +35,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView_title" />
-
 
 
         <View
