--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -37,8 +37,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
-            android:background="@drawable/border_avatar_contact"
+            android:foreground="@drawable/border_avatar_contact"
             android:onClick="@{() -> clickListener.onClickAvatar(conversation)}"
+            android:padding="1dp"
             app:avatar="@{conversation.contact}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
