--- a/app/src/main/res/layout/preview_media_fragment.xml
+++ b/app/src/main/res/layout/preview_media_fragment.xml
@@ -70,7 +70,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/black_40"
-            android:padding="@dimen/normal_padding"
+            android:padding="@dimen/x_small_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -82,6 +82,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:padding="@dimen/small_padding"
                 app:srcCompat="@drawable/ic_arrow_back_white" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -108,7 +109,7 @@
                 app:layout_constraintBottom_toTopOf="@id/container_seekbar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="@tools:sample/lorem[4]" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container_seekbar"
