--- a/app/src/main/res/values/self_destruct_time.xml
+++ b/app/src/main/res/values/self_destruct_time.xml
@@ -15,6 +15,7 @@
     <string name="text_every_one_minute">1 minute</string>
     <string name="text_every_ten_minutes">10 minutes</string>
     <string name="text_every_twelve_hours">12 hours</string>
+    <string name="text_every_twenty_four_hours_min" translatable="false">24:00:00</string>
     <string name="text_every_one_day">1 day</string>
     <string name="text_info_conversation_message_self_destruction">Messages sent in this conversation will be deleted after the selected time.</string>
     <string name="text_info_message_autodestruction_time_failed_messages">Sent messages in conversations that do not reach their destination or are not read, will be deleted after the selected time</string>
