--- a/app/src/main/res/values-it/register.xml
+++ b/app/src/main/res/values-it/register.xml
@@ -6,7 +6,7 @@
     <string name="text_nickname_must_not_contain_space">Non può contenere spazi vuoti</string>
     <string name="text_cant_contain_special_characters">Non può contenere caratteri speciali</string>
     <string name="text_nickname_contain_at_least_one_number">Deve contenere almeno un numero</string>
-    <string name="text_nickname_not_contain_enough_char_and_number">Il soprannome deve contenere almeno quattro caratteri e un numero</string>
+    <string name="text_nickname_not_contain_enough_char_and_number">Il nickname deve contenere almeno 3 caratteri e 1 numero</string>
     <string name="text_nickname_contain_at_least_one_letter">Il soprannome deve contenere almeno una lettera</string>
     <string name="text_only_start_letter">Il soprannome deve iniziare con una lettera</string>
 </resources>
