--- a/app/src/main/res/values-pt/register.xml
+++ b/app/src/main/res/values-pt/register.xml
@@ -6,7 +6,7 @@
     <string name="text_nickname_must_not_contain_space">Não pode conter espaços em branco</string>
     <string name="text_cant_contain_special_characters">Não pode conter caracteres especiais</string>
     <string name="text_nickname_contain_at_least_one_number">Ele deve conter pelo menos um número</string>
-    <string name="text_nickname_not_contain_enough_char_and_number">O apelido deve conter, pelo menos, quatro caracteres e um número</string>
+    <string name="text_nickname_not_contain_enough_char_and_number">O apelido deve conter pelo menos 3 caracteres e 1 número</string>
     <string name="text_nickname_contain_at_least_one_letter">O apelido deve conter no uma letra menos</string>
     <string name="text_only_start_letter">O apelido deve começar com uma letra</string>
 </resources>
