--- a/app/src/main/res/drawable/bg_incoming_message.xml
+++ b/app/src/main/res/drawable/bg_incoming_message.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
+<item android:width="40dp">
     <rotate
         android:fromDegrees="-45"
         android:pivotX="0%"
