--- a/app/src/main/res/drawable/anim_play_to_pause.xml
+++ b/app/src/main/res/drawable/anim_play_to_pause.xml
@@ -14,7 +14,7 @@
                 android:pivotY="12">
                 <path
                     android:name="path"
-                    android:pathData="M 8 5 L 8 19 L 19 12 Z"
+                    android:pathData="M 5 6 L 5 10 L 19 10 L 19 6 L 5 6 M 5 14 L 5 18 L 19 18 L 19 14 L 5 14"
                     android:fillColor="#000000"
                     android:strokeWidth="1"/>
             </group>
