--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -13,13 +13,41 @@
         android:background="?attr/attrBackgroundColorBackground"
         tools:context=".ui.help.HelpFragment">
 
+        <!-- OPTION REPEAT SHOW CASE -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/option_repeat_show_case"
+            style="@style/Option"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- OPTION TITLE -->
+            <TextView
+                style="@style/OptionTitle"
+                android:layout_marginStart="0dp"
+                android:text="Repetir show case"
+                app:layout_constraintEnd_toStartOf="@id/imageButton_repeat_show_case_option_end_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!-- EDIT ICON -->
+            <ImageButton
+                android:id="@+id/imageButton_repeat_show_case_option_end_icon"
+                style="@style/OptionEndIcon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_arrow_right_primary" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <!-- OPTION CONTACT US -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/option_contact_us"
             style="@style/Option"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/option_repeat_show_case">
 
             <!-- OPTION TITLE -->
             <TextView
