--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -19,6 +19,15 @@
             android:layout_height="match_parent"
             android:background="?attr/attrBackgroundColorBackground">
 
+            <View
+                android:id="@+id/view_show_case_status"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:clickable="false"
+                android:focusable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <!-- SUBSCRIPTION -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container_subscription"
@@ -76,6 +85,7 @@
                     style="@style/BodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/small_margin"
                     android:layout_marginEnd="@dimen/small_margin"
                     android:ellipsize="marquee"
                     android:fadingEdge="horizontal"
@@ -86,7 +96,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/imageButton_status_end_icon"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@tools:sample/lorem[15]" />
+                    tools:text="Disponible" />
 
                 <ImageButton
                     android:id="@+id/imageButton_status_end_icon"
