--- a/app/src/main/res/menu/main_chat_menu.xml
+++ b/app/src/main/res/menu/main_chat_menu.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/suscription"
-        android:icon="@drawable/ic_star_black"
-        android:title="@string/text_subscription_title" />
+        android:title="@null"
+        app:actionLayout="@layout/drawer_menu_item_subscription" />
 
     <item
         android:id="@+id/security_settings"
-        android:icon="@drawable/ic_settings_black"
-        android:title="@string/text_security_settings_title" />
+        android:title="@null"
+        app:actionLayout="@layout/drawer_menu_item_security_settings" />
 
     <item
         android:id="@+id/appearance_settings"
-        android:icon="@drawable/ic_palette_black"
-        android:title="@string/text_appearance_settings_title" />
+        android:title="@null"
+        app:actionLayout="@layout/drawer_menu_item_appearance_settings" />
 
     <item
         android:id="@+id/invite_someone"
-        android:icon="@drawable/ic_people_black"
-        android:title="@string/text_invite_someone_title" />
+        android:title="@null"
+        app:actionLayout="@layout/drawer_menu_item_invite_some_one" />
 
     <item
         android:id="@+id/help"
-        android:icon="@drawable/ic_help_black"
-        android:title="@string/text_help_title" />
+        android:title="@null"
+        app:actionLayout="@layout/drawer_menu_item_help" />
 </menu>
